--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def key = properties.getProperty('TMDB_API_KEY')
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -11,11 +15,16 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'TMDB_API_KEY', key
     }
 }
 
@@ -28,5 +37,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
+    compile group: 'info.movito', name: 'themoviedbapi', version:'1.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
