--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,9 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile group: 'info.movito', name: 'themoviedbapi', version: '1.3'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
-    compile group: 'info.movito', name: 'themoviedbapi', version:'1.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:support-v4:23.3.0'
 }
